--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
   "params" : { "localhost_uri": "mysql://root:@localhost/blog",
     "local_host": "True",
     "gmail-user": "aryanjainak@gmail.com",
-    "gmail-pass": "puspa456",
+    "gmail-pass": "--------",
     "admin-user": "aryanjainak",
-    "admin-pass": "puspa456"
+    "admin-pass": "--------"
   }
 
 }
